--- a/Website/CSS/Nameless.css
+++ b/Website/CSS/Nameless.css
@@ -211,3 +211,23 @@ body{
   .left{
     float: left;
   }
+
+  #myBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky posiStion */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: 1px red;
+    outline: 1px red; /* Remove outline */
+    background-color: black; /* Set a background color */
+    color: silver; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+    font-size: 18px; /* Increase font size */
+  }
+  
+  #myBtn:hover {
+    background-color: #555; /* Add a dark-grey background on hover */
+  }
