--- a/Website/CSS/home.css
+++ b/Website/CSS/home.css
@@ -35,98 +35,7 @@ body{
     padding: auto;
   }
   
-  /* Responsive layout - when the screen is less than 600px wide, make the three columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 600px) {
-    .column {
-      width: 80%;
-    }
-  }
-  
-  .button {
-    background-color: black;
-    color: black;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    border-radius: 8px;
-    border: 2px solid red;
-    transition-duration: 0.4s;
-  }
-  
-  .button:hover {
-    background-color: white;
-    color: black;
-    -webkit-text-stroke: black;
-  }
-  
-  /* Add a black background color to the top navigation */
-  .topnav {
-  background-color: black;
-  overflow: hidden;
-  }
-  
-  /* Style the links inside the navigation bar */
-  .topnav a {
-  float: left;
-  display: block;
-  color: black;
-  -webkit-text-stroke: 1px red;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 30px;
-  }
-  
-  /* Change the color of links on hover */
-  .topnav a:hover {
-  background-color: #ddd;
-  color: black;
-  }
-  
-  /* Add an active class to highlight the current page */
-  .topnav a.active {
-  background-color: red;
-  color: black;
-  -webkit-text-stroke: 1px black;
-  }
-  
-  .topnav a.visited {
-    color: black;
-    -webkit-text-stroke: 1px red;
-  }
-  /* Hide the link that should open and close the topnav on small screens */
-  .topnav .icon {
-  display: none;
-  }
-  
-  /* Style the search box inside the navigation bar */
-  .topnav input[type=text] {
-  float: right;
-  padding: 6px;
-  border: 1px red solid;
-  margin-top: 8px;
-  margin-right: 16px;
-  font-size: 17px;
-  color: black;
-  }
-  
-  /* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
-  @media screen and (max-width: 600px) {
-  .topnav a, .topnav input[type=text] {
-    float: none;
-    display: block;
-    text-align: left;
-    width: 100%;
-    margin: 0;
-    padding: 14px;
-  }
-  .topnav input[type=text] {
-    border: 1px solid #ccc;
-  }
-  }
-  
+
   /* Three columns side by side */
   .column {
   float: left;
@@ -250,8 +159,8 @@ body{
   z-index: 99; /* Make sure it does not overlap */
   border: none; /* Remove borders */
   outline: none; /* Remove outline */
-  background-color: red; /* Set a background color */
-  color: white; /* Text color */
+  background-color: #333; /* Set a background color */
+  color: red; /* Text color */
   cursor: pointer; /* Add a mouse pointer on hover */
   padding: 15px; /* Some padding */
   border-radius: 10px; /* Rounded corners */
