--- a/Website/CSS/navbar.css
+++ b/Website/CSS/navbar.css
@@ -1,11 +1,12 @@
 .topnav {
-    background-color: #333;
+    background-color: darkgreen;
     overflow: hidden;
   }
   
   .topnav a {
     float: left;
-    color: #f2f2f2;
+    color: black;
+    -webkit-text-stroke:  .5px white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -18,6 +19,7 @@
   }
   
   .topnav a.active {
-    background-color: #04AA6D;
-    color: white;
+    background-color: darkred;
+    color: black;
+    -webkit-text-stroke:  .5px white;
   }
